--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -36,7 +36,7 @@ h5{
 
 div.render-panel{
   border: 1px solid #ECECEE;
-  border-radius: 0px 11.2px 11.2px 0px;
+  border-radius: 0px 11.2px 11.2px 0px!important;
 }
 
 div.table-border{
