--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -12,7 +12,6 @@ code {
     monospace;
 }
 
-
 html, #root {
   background: #F4F4F5;
 }
@@ -59,8 +58,6 @@ p.preview-text{
 }
 
 
-
-
 li.rounded-pills{
   font-family: 'Segoe UI';
   font-style: normal;
@@ -105,7 +102,14 @@ div.logo-bg{
   border-radius: 11.2px;
 }
 
-.isLoading p,.isLoading h5,.isLoading h4,.isLoading li{
+.isLoading div.card, .isLoading i{
+  display: none;
+} 
+
+
+/* .isLoading h6 */
+
+.isLoading p,.isLoading h5,.isLoading h4, .isLoading li{
   color: transparent;
   background: linear-gradient(to right, #f2f2f2 0%, #e6e6e6 50%, #f2f2f2 100%);
   animation: loadingShine 0.5s infinite;
@@ -122,12 +126,70 @@ div.logo-bg{
 
 
 .card{
-  border: none!important;
+  /* border: none!important;
   background: #FFFFFF;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.12);
-  border-radius: 5px;
+  border-radius: 5px; */
+
+
+
+
+  background: #FFFFFF;
+  border: 1px solid #F1F1F1!important;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.12);
+  /* box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.08); */
+  border-radius: 8px;
 }
 
 span {
   color: #666666;
 }
+
+.btn.btn-primary{
+  background: #000000;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  color: white;
+}
+
+
+.btn.btn-secondary{
+  background: #FFFFFF;
+  border: 1px solid #EAEAEA;
+  border-radius: 5px;
+  color: #666666;
+}
+
+h6{
+  font-family: 'Segoe UI';
+  font-style: normal;
+  font-weight: 600!important;
+  font-size: 20px!important;
+  color: rgba(0, 0, 0, 0.9);
+}
+
+img.profile-image{
+  border-radius: 100%;
+  width: auto;
+  height: 50px;
+}
+
+img.profile-image.filtered{
+  filter: grayscale(1);
+}
+
+
+a.profile-image + a.profile-image {
+  margin-left: -45px; /* Adjust the negative margin to control the overlap */
+}
+
+
+img.profile-image + img.profile-image {
+  margin-left: -45px; /* Adjust the negative margin to control the overlap */
+}
+
+div.search-results-banner{
+  background-color: #0A66C2;
+  color: white;
+}
+
