--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -193,3 +193,22 @@ div.search-results-banner{
   color: white;
 }
 
+
+input.form-control{
+  background: #FFFFFF;
+  border: 1px solid #D1D5DB;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
+}
+
+input.form-control:focus{
+  background: #FFFFFF;
+  border: 1px solid #6366F1;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05), 0px 0px 0px 1px #6366F1;
+  border-radius: 6px;
+}
+
+label{
+  font-weight: 500;
+  color: #374151;
+}
