--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -45,3 +45,15 @@
 i.red{
   color:red!important;
 } */
+
+
+.autocomplete{
+  background: white!important;
+  padding: 10px;
+  color: #585858;
+  margin-top: 5px;
+  border: 1px solid #D1D5DB;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
+  cursor: pointer;
+}
